hello world example

--- a/commonui-examples/Cargo.toml
+++ b/commonui-examples/Cargo.toml
@@ -9,3 +9,4 @@ repository.workspace = true
 [dependencies]
 gui-core = { path = "../gui-core" }
 tokio = { workspace = true }
+vello = { workspace = true }
