--- a/gui-core/Cargo.toml
+++ b/gui-core/Cargo.toml
@@ -13,3 +13,5 @@ gui-render = { path = "../gui-render" }
 tokio = { workspace = true }
 winit = { workspace = true }
 vello = { workspace = true }
+wgpu = { workspace = true }
+pollster = { workspace = true }
