--- a/commonui-examples/Cargo.toml
+++ b/commonui-examples/Cargo.toml
@@ -11,3 +11,5 @@ gui-core = { path = "../gui-core" }
 gui-reactive = { path = "../gui-reactive" }
 tokio = { workspace = true }
 vello = { workspace = true }
+wgpu = { workspace = true }
+bytemuck = { version = "1.0", features = ["derive"] }
